feat: implement iterations 19-20 detectors and insight guardrails

--- a/packages/eva/eva.config.json
+++ b/packages/eva/eva.config.json
@@ -5,5 +5,10 @@
   },
   "quickvision": {
     "wsUrl": "ws://localhost:8000/infer"
+  },
+  "insightRelay": {
+    "enabled": true,
+    "cooldownMs": 10000,
+    "dedupeWindowMs": 60000
   }
 }
