--- a/packages/eva/eva.config.local.example.json
+++ b/packages/eva/eva.config.local.example.json
@@ -11,6 +11,19 @@
     "cooldownMs": 10000,
     "dedupeWindowMs": 60000
   },
+  "speech": {
+    "enabled": true,
+    "path": "/speech",
+    "defaultVoice": "en-US-JennyNeural",
+    "maxTextChars": 1000,
+    "maxBodyBytes": 65536,
+    "cooldownMs": 0,
+    "cache": {
+      "enabled": true,
+      "ttlMs": 600000,
+      "maxEntries": 64
+    }
+  },
   "subprocesses": {
     "enabled": true,
     "visionAgent": {
