--- a/packages/eva/package.json
+++ b/packages/eva/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cosmiconfig": "^9.0.0",
+    "node-edge-tts": "1.2.10",
     "ws": "^8.18.3",
     "zod": "^3.24.1"
   },
