feat: implement speech tts_response flow across VisionAgent->QuickVision->UI (iters 39-43)

--- a/packages/ui/public/config.json
+++ b/packages/ui/public/config.json
@@ -7,10 +7,9 @@
     "path": "/speech",
     "defaultVoice": "en-US-JennyNeural",
     "autoSpeak": {
-      "enabled": false,
+      "enabled": true,
       "minSeverity": "medium",
-      "cooldownMs": 2000,
-      "textTemplate": "Insight: {{one_liner}}"
+      "cooldownMs": 2000
     }
   }
 }
