--- a/packages/eva/eva.config.json
+++ b/packages/eva/eva.config.json
@@ -3,13 +3,23 @@
     "port": 8787,
     "eyePath": "/eye"
   },
-  "quickvision": {
+  "vision": {
     "wsUrl": "ws://localhost:8000/infer"
   },
   "insightRelay": {
     "enabled": true,
     "cooldownMs": 10000,
     "dedupeWindowMs": 60000
+  },
+  "agent": {
+    "baseUrl": "http://127.0.0.1:8791",
+    "timeoutMs": 30000
+  },
+  "text": {
+    "enabled": true,
+    "path": "/text",
+    "maxBodyBytes": 16384,
+    "maxTextChars": 4000
   },
   "speech": {
     "enabled": false,
