--- a/packages/eva/agent/package.json
+++ b/packages/eva/agent/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "tsx src/index.ts",
     "build": "tsc -p tsconfig.json",
-    "typecheck": "tsc -p tsconfig.json --noEmit"
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "mem:reset:working": "node ./scripts/reset-working.mjs",
+    "mem:reset:session": "node ./scripts/reset-session.mjs",
+    "mem:reset:all": "node ./scripts/reset-all.mjs"
   },
   "dependencies": {
+    "@lancedb/lancedb": "0.26.2",
     "@mariozechner/pi-ai": "^0.52.12",
     "@sinclair/typebox": "^0.34.41",
     "cosmiconfig": "^9.0.0",
