--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@ packages/eva/memory/short_term_memory.db
 packages/eva/memory/cache/**
 packages/eva/memory/long_term_memory_db/**
 
+# EVA LLM trace logs
+packages/eva/llm_logs/**
+!packages/eva/llm_logs/config.example.json
+
 # OS/editor
 .DS_Store
 .vscode/
