executive: complete iterations 145-160 (job naming + retrieval wiring)

--- a/packages/eva/executive/agent.config.json
+++ b/packages/eva/executive/agent.config.json
@@ -15,5 +15,18 @@
     "maxBodyBytes": 8388608,
     "ttsStyle": "spicy"
   },
+  "jobs": {
+    "enabled": true,
+    "timezone": "UTC",
+    "compaction": {
+      "enabled": true,
+      "cron": "* * * * *",
+      "windowMs": 60000
+    },
+    "promotion": {
+      "enabled": true,
+      "cron": "15 3 * * *"
+    }
+  },
   "secretsFile": "agent.secrets.local.json"
 }
