--- a/packages/eva/package.json
+++ b/packages/eva/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cosmiconfig": "^9.0.0",
     "node-edge-tts": "1.2.10",
+    "sharp": "0.33.5",
     "ws": "^8.18.3",
     "zod": "^3.24.1"
   },
