--- a/packages/eva/captioner/requirements.txt
+++ b/packages/eva/captioner/requirements.txt
@@ -2,6 +2,7 @@ fastapi>=0.115,<1.0
 uvicorn[standard]>=0.32,<1.0
 dynaconf>=3.2,<4.0
 Pillow>=11.0,<12.0
-torch>=2.2,<2.4
-torchvision>=0.17,<0.19
+torch>=2.6,<2.7
+torchvision>=0.21,<0.22
+torchaudio>=2.6,<2.7
 transformers>=4.46,<5.0
